namespace Dominio.Enums
{
    // 0=Lunes..6=Domingo — idéntico a la convención de BD (ISO 8601, CHECK constraint)
    public enum DiaSemana { Lunes = 0, Martes, Miercoles, Jueves, Viernes, Sabado, Domingo }
}
