namespace Dominio.Enums
{
    // mismo orden que los IDFormaPago de la tabla FormasPago
    public enum FormaPago
    {
        Efectivo = 1,
        Transferencia = 2,
        TarjetaDebito = 3,
        TarjetaCredito = 4,
        MercadoPago = 5
    }
}
