using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Dominio.Enums
{
    public enum RolUsuario
    {
        Administrador = 1,
        Recepcionista = 2,
        EncargadoCancha = 3,
        Cliente = 4
    }
}